--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>디지털 콘텐츠 편집 플랫폼</title>
+    <title>AI 콘텐츠 편집 플랫폼</title>
   </head>
   <body>
     <div id="root"></div>
